feitas algumas alterações CSS

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="soundtrack">
         <section>
             <p>
                 <img src="src/images/image 10.png" alt="imagem m">
             </p>
             <div>
                 <h1>
-                    it's possible to do </br>
-                    do video call with </br>
+                    It's possible to do </br>
+                    video call with </br>
                     your costomers </br>
                 </h1>
                 <p>
